# general-tools

./: .gitignore  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  build_bazel.sh  build_project.sh  clean_project.sh  docker-dev.sh  install_apt_dependencies.sh  install_dependencies.sh  requirements.txt  run-ci.sh
.github/workflows/: ci.yml
a17/: LICENSE
a17/capnp_msgs/: BUILD.bazel  CMakeLists.txt  README.md  error.capnp  geometry.capnp  test.capnp
a17/capnp_msgs/cmake/: Deps.cmake.in
a17/dispatch/: BUILD.bazel  CMakeLists.txt  README.md  address.cpp  address.h  address_test.cpp  ci.yml  client.cpp  client.h  defs.cpp  defs.h  directory.cpp  directory.h  directory_test.cpp  directory_topic.cpp  directory_topic.h  handlers.h  listener.cpp  listener.h  message_helpers.cpp  message_helpers.h  messages_test.cpp  node.cpp  node.h  node_gemini.cpp  node_gemini.h  pub_client.h  publisher.h  reply_server.cpp  reply_server.h  request_client.cpp  request_client.h  server.cpp  server.h  smart_capnp_builder.cpp  smart_capnp_builder.h  smart_capnp_reader.cpp  smart_capnp_reader.h  smart_message_reader.cpp  smart_message_reader.h  (+14 more)
a17/dispatch/cmake/: Deps.cmake.in
a17/dispatch/py/: dispatch.py  dispatchrpc.py
a17/dispatch/scripts/: show_topic_graph
a17/dispatch_tornado_bridge/: BUILD.bazel  CMakeLists.txt  __init__.py  dispatch_tornado_bridge.py
a17/maths/: BUILD.bazel  CMakeLists.txt  angle_unroller.cpp  angle_unroller.h  angle_unroller_test.cpp  angle_utils.cpp  angle_utils.h  angle_utils_test.cpp  constants.cpp  constants.h  float_utils.h  float_utils_test.cpp  matrix_utils.h  matrix_utils_test.cpp  polynomial.h  polynomial_test.cpp  polynomial_utils.h  polynomial_utils_test.cpp  quaternion_utils.h  quaternion_utils_test.cpp  rotations.cpp  rotations.h  rotations_test.cpp  transformations.py
a17/maths/cmake/: Deps.cmake.in
a17/utils/: BUILD.bazel  CMakeLists.txt  bind.h  buffer_pool.cpp  buffer_pool.h  buffer_pool_test.cpp  character_device.cpp  character_device.h  nearest_interval_bin.cpp  nearest_interval_bin.h  pid.cpp  pid.h  pid_test.cpp  rate_measure.cpp  rate_measure.h  rate_measure_test.cpp  repeater.cpp  repeater.h  serial_port.cpp  serial_port.h  spdlog.cpp  spdlog.h  udp_socket.cpp  udp_socket.h  watchdog.cpp  watchdog.h  watchdog_test.cpp
a17/utils/cmake/: Config.cmake.in  Deps.cmake.in
cmake/: A17DefaultPaths.cmake  FindA17Protobuf.cmake  FindAsioDirMonitor.cmake  FindCatch.cmake  FindDISPATCH.cmake  FindGRPC.cmake  FindGlog.cmake  FindLeveldb.cmake  FindLibigl.cmake  Findcapnpmsgs.cmake  Findcapnproto.cmake  Findurg_library.cmake  README.md  azmqConfig.cmake
tools/rules/: capnproto.bzl  catch_cc_test.bzl  pkg_tar_symlink_libs.bzl  qt.bzl
